Fix gaps between all elements in the header

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,6 +13,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -49,15 +50,19 @@ ul {
   list-style-type: none;
   display: flex;
   padding-left: 0px;
-  gap: 15px;
+  gap: 16px;
 }
 
 .left-links,
 .right-links {
   display: flex;
-  gap: 15px;
+  gap: 16px;
 }
 
 .right-links {
   margin: 10px 10px 10px auto;
+}
+
+.left-links {
+  margin-left: 10px;
 }
